improve: bg color and fix dark mode

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,2 +1,7 @@
 /* Tailwind CSS is now handled by @nuxtjs/tailwindcss module */
 @import 'tailwindcss';
+@custom-variant dark (&:where(.dark, .dark *));
+
+html {
+  @apply bg-black/90;
+}
